# NetRelaxSolution

./: CMakeLists.txt  NetRelaxSolution.sln  README.md
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters
Client/src/: Main.cpp
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  Util.h
Server/include/: Server.h  Util.h
Server/src/: Commands.cpp  Main.cpp  Server.cpp  Util.cpp
SocketsLibrary/: CMakeLists.txt  SocketsLibrary.vcxproj  SocketsLibrary.vcxproj.filters
SocketsLibrary/include/: Client.h  ConnectedSocket.h  GetError.h  ListenerSocket.h  NetSocket.h  Program.h  Server.h  SocketBase.h  SocketsLibrary.h
SocketsLibrary/src/: Client.cpp  ListenerSocket.cpp  Server.cpp  SocketBase.cpp
